--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -51,6 +51,22 @@
         gtag('js', new Date());
 
         gtag('config', 'G-T9JNTGCLF9');
+
+
+    // Helpful functions 
+    function zuluToDatetimeLocal(zuluString) {
+      const date = new Date(zuluString);
+
+      const pad = (n) => n.toString().padStart(2, '0');
+
+      const year = date.getFullYear();
+      const month = pad(date.getMonth() + 1);
+      const day = pad(date.getDate());
+      const hours = pad(date.getHours());
+      const minutes = pad(date.getMinutes());
+
+      return `${year}-${month}-${day}T${hours}:${minutes}`;
+    }
     </script>
 
 </head>
